feat(backend): update service enpoint for roles and tested